--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -79,3 +79,110 @@ Got it 👍 Let’s go **briefly and clearly** about Amazon S3 and the terms you
 ---
 
 Do you want me to also give you **interview-style scenario questions** on these topics (like “how do you recover a deleted object if versioning is enabled/disabled”)?
+Okay 👍 let’s go simple and brief:
+
+### **Lifecycle Rules in S3**
+
+* Lifecycle rules = automation for **object management** over time.
+* You set **rules** to move or delete objects automatically, which helps save cost.
+
+---
+
+### **What You Can Do with Lifecycle Rules**
+
+1. **Transition** – Move objects between storage classes:
+
+   * Example: After 30 days → move from **S3 Standard** to **S3 Standard-IA (Infrequent Access)**.
+   * After 90 days → move to **S3 Glacier** for archival.
+
+2. **Expiration** – Delete objects after a set time.
+
+   * Example: Delete logs after 180 days.
+
+3. **Versioned Buckets**
+
+   * Expire old versions (delete non-current versions after X days).
+   * Permanently delete expired delete markers.
+
+---
+
+👉 In short:
+Lifecycle rules = **cost optimization + cleanup automation**.
+They help you automatically **move, archive, or delete objects** based on age or version.
+
+---
+
+Do you want me to also draw a **real-time example scenario** (like log storage lifecycle from Standard → Glacier → deletion)?
+Perfect 👍 let’s go **briefly but clear** on **Amazon S3 storage classes**.
+
+---
+
+### **What are Storage Classes?**
+
+* In S3, every object is stored in a **storage class**.
+* Each class is designed for **different cost, availability, and access patterns**.
+* You choose based on how often you need the data and how long you want to keep it.
+
+---
+
+### **Main S3 Storage Classes**
+
+1. **S3 Standard**
+
+   * For frequently accessed data.
+   * High durability & availability (99.99%).
+   * Use case: websites, apps, active data.
+
+2. **S3 Standard-IA (Infrequent Access)**
+
+   * Lower cost than Standard.
+   * Good for data accessed occasionally but still needs fast access.
+   * Example: backups, disaster recovery files.
+
+3. **S3 One Zone-IA**
+
+   * Like Standard-IA but stored in **one AZ only**.
+   * Cheaper, but less resilient.
+   * Example: secondary backups, data you can recreate.
+
+4. **S3 Intelligent-Tiering**
+
+   * Automatically moves objects between frequent and infrequent tiers.
+   * Best when access patterns are unpredictable.
+
+5. **S3 Glacier Instant Retrieval**
+
+   * Very low cost.
+   * Data available in **milliseconds**.
+   * Example: archives that need occasional instant access.
+
+6. **S3 Glacier Flexible Retrieval (Formerly Glacier)**
+
+   * Super low cost.
+   * Retrieval takes **minutes to hours**.
+   * Example: archives you rarely access.
+
+7. **S3 Glacier Deep Archive**
+
+   * Cheapest storage class.
+   * Retrieval takes **12–48 hours**.
+   * Example: compliance archives, data you must keep for years.
+
+8. **S3 Reduced Redundancy (Legacy, not recommended)**
+
+   * Lower durability, cheaper.
+   * Mostly phased out.
+
+---
+
+👉 **In short:**
+
+* **Standard** = frequent use.
+* **Standard-IA / One Zone-IA** = rare access.
+* **Intelligent-Tiering** = unpredictable access.
+* **Glacier classes** = long-term archive (Instant, Flexible, Deep).
+
+---
+
+Do you want me to also make a **comparison table (cost, durability, retrieval time, use case)** so you can quickly revise before interviews?
+
