--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -185,4 +185,41 @@ Perfect 👍 let’s go **briefly but clear** on **Amazon S3 storage classes**.
 ---
 
 Do you want me to also make a **comparison table (cost, durability, retrieval time, use case)** so you can quickly revise before interviews?
+Okay 👍 let’s make this line easy to understand:
 
+---
+
+### **“Control access to data sets within S3 by using identities from your corporate directory or AWS Identity and Access Management (IAM).”**
+
+* This means you can decide **who can access your S3 data** (buckets, folders, or files).
+* The “who” can be:
+
+  * **Corporate directory users** → people in your company’s login system (like employees with office email IDs).
+  * **IAM identities** → AWS users or roles you create in your AWS account.
+
+---
+
+### **“You can create only one Access Grants instance per AWS Region per account.”**
+
+* An **Access Grants instance** is like the **main control room** in a region.
+* You only get **one control room per AWS Region per account**.
+
+  * Example: In `us-east-1`, you can only have **one Access Grants instance**.
+  * If you also use `ap-south-1`, you can create **another one there**.
+
+---
+
+👉 In short:
+
+* **Access Grants** let you manage who gets access to S3 data.
+* You can use **company employees** (via directory) or **AWS IAM users/roles**.
+* But you can only create **one Access Grants system per region per AWS account**.
+
+---
+
+Do you want me to also show you a **diagram-like analogy** (like office building with only one security office per city/region)?
+S3 itself is global.
+
+Buckets are region-specific (data lives in the region you select).
+
+Bucket names are unique globally.
