--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -223,3 +223,116 @@ S3 itself is global.
 Buckets are region-specific (data lives in the region you select).
 
 Bucket names are unique globally.
+Perfect 👍 Here’s a **Quick S3 Interview Q\&A Cheat Sheet** you can use for last-minute revision 🚀
+
+---
+
+## 🔹 **Basic**
+
+**Q1. What is Amazon S3?**
+A: Object storage service to store/retrieve unlimited data, highly durable (11 9’s durability).
+
+**Q2. Difference between S3 and EBS/EFS?**
+A: S3 = object storage (files in buckets), EBS = block storage (for EC2), EFS = file storage (shared, NFS).
+
+**Q3. Are S3 buckets global or regional?**
+A: Buckets are **region-specific**, but bucket names are **globally unique**.
+
+**Q4. What is an S3 object?**
+A: A file stored in S3 (data + metadata + key).
+
+---
+
+## 🔹 **Storage Classes**
+
+**Q5. Name S3 storage classes.**
+A: Standard, Standard-IA, One Zone-IA, Intelligent-Tiering, Glacier Instant, Glacier Flexible, Glacier Deep Archive.
+
+**Q6. Standard-IA vs One Zone-IA?**
+A: Standard-IA = data in multiple AZs, One Zone-IA = stored in single AZ (cheaper, less durable).
+
+**Q7. Intelligent-Tiering?**
+A: Moves objects between frequent/infrequent tiers automatically based on access patterns.
+
+**Q8. Glacier classes?**
+A: Instant (ms retrieval), Flexible (minutes–hours), Deep Archive (12–48 hrs).
+
+---
+
+## 🔹 **Data Protection**
+
+**Q9. What is versioning?**
+A: Keeps multiple versions of objects to recover deleted/overwritten files.
+
+**Q10. Recover deleted object if versioning enabled?**
+A: Delete marker is created → restore by removing it or using the older version ID.
+
+**Q11. What is Object Lock?**
+A: WORM storage mode → prevents objects from being deleted/overwritten.
+
+---
+
+## 🔹 **Security & Access**
+
+**Q12. ACL vs Bucket Policy vs IAM Policy?**
+A: ACL = legacy object-level access, Bucket Policy = JSON rules at bucket level, IAM Policy = user/role access.
+
+**Q13. What is Block Public Access?**
+A: Feature to prevent accidental public exposure of buckets/objects.
+
+**Q14. What are S3 Access Points?**
+A: Named endpoints with their own policies for controlled access.
+
+**Q15. What is S3 Access Grants?**
+A: Scalable way to give access using IAM or corporate directory identities.
+
+**Q16. Encryption types?**
+A: SSE-S3 (AWS managed keys), SSE-KMS (KMS keys), SSE-C (customer keys), Client-side (app encrypts before upload).
+
+---
+
+## 🔹 **Performance & Optimization**
+
+**Q17. What is lifecycle policy?**
+A: Rules to transition data between storage classes or delete objects.
+
+**Q18. Replication types?**
+A: SRR (Same Region Replication), CRR (Cross Region Replication).
+
+**Q19. Multipart upload?**
+A: Splits large files (>100MB recommended, mandatory for >5GB) into smaller parts for faster upload.
+
+**Q20. Transfer Acceleration?**
+A: Speeds up uploads/downloads using AWS Edge Locations.
+
+**Q21. S3 consistency model?**
+A: Strong consistency for all reads/writes.
+
+---
+
+## 🔹 **Scenarios**
+
+**Q22. Protect bucket from accidental deletion?**
+A: Enable versioning + MFA Delete.
+
+**Q23. Store logs for 7 years (rarely accessed)?**
+A: Use Glacier Deep Archive.
+
+**Q24. Optimize slow downloads?**
+A: Use Transfer Acceleration, caching with CloudFront, multipart download.
+
+**Q25. Share file for 24 hrs only?**
+A: Generate a **pre-signed URL** with 24-hr expiry.
+
+**Q26. Max object size in S3?**
+A: 5 TB (multipart upload needed for >5 GB).
+
+**Q27. Pre-signed URL vs Signed Cookie?**
+A: Pre-signed URL = share single object securely, Signed Cookie = share multiple objects with one signature.
+
+---
+
+⚡ This sheet covers **30 core S3 questions** with crisp answers → perfect for quick prep.
+
+Do you also want me to add **some tricky scenario-based questions** (the kind interviewers use to test real-world thinking)?
+
