--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -335,4 +335,104 @@ A: Pre-signed URL = share single object securely, Signed Cookie = share multiple
 ⚡ This sheet covers **30 core S3 questions** with crisp answers → perfect for quick prep.
 
 Do you also want me to add **some tricky scenario-based questions** (the kind interviewers use to test real-world thinking)?
+Great question 👍
 
+### **What happens if you suspend versioning in S3?**
+
+* **Old versions remain safe** ✅
+
+  * Any object versions that already exist will stay in the bucket. They are **not deleted**.
+
+* **New uploads don’t get version IDs** ❌
+
+  * After suspension, when you upload a new object with the same key, it **overwrites the old object** (like normal buckets without versioning).
+  * No new version is created.
+
+* **Delete works normally** 🗑️
+
+  * If you delete an object, it’s **permanently deleted** (no delete marker is added).
+
+---
+
+👉 **In short:**
+
+* **Enable versioning** → every change/deletion creates a new version.
+* **Suspend versioning** → bucket behaves like versioning was never enabled for new objects, but old versions are still there and retrievable.
+
+---
+
+✅ Example:
+
+1. You enabled versioning → uploaded `file.txt` three times → you now have versions V1, V2, V3.
+2. You **suspend versioning** → upload again → this overwrites V3 (no new version created).
+3. V1, V2, V3 are still there, but no new versions will be added.
+
+---
+
+Do you want me to also explain the difference between **suspending versioning vs disabling it permanently** (trick interview question)?
+Great one 👍 This comes up often in interviews.
+
+---
+
+### **MFA Delete in S3**
+
+* **MFA (Multi-Factor Authentication) Delete** is a **security feature** in Amazon S3.
+* When enabled on a **versioned bucket**, it requires an additional **MFA code** (from a physical/virtual device) to perform **sensitive delete operations**.
+
+---
+
+### **What does it protect?**
+
+With **MFA Delete enabled**:
+
+1. **Delete an object version** → needs MFA.
+2. **Permanently delete a delete marker** → needs MFA.
+3. **Suspend versioning** → needs MFA.
+
+👉 Normal **PUT (upload)** and **GET (read)** operations don’t need MFA.
+
+---
+
+### **Why is it useful?**
+
+* Prevents accidental or malicious deletion of data.
+* Even if someone compromises your IAM credentials, they **cannot delete objects** without the MFA code.
+
+---
+
+### **Limitations**
+
+* Works **only on versioned buckets**.
+* Can only be enabled/disabled via **AWS CLI or API**, not from the AWS Management Console.
+* Needs the **root account** to enable.
+
+---
+
+✅ **Example:**
+
+* Bucket has versioning + MFA Delete enabled.
+* If someone tries to permanently delete an object version, they must provide:
+
+  * Normal AWS credentials **+**
+  * MFA token code (e.g., from Google Authenticator).
+
+---
+
+👉 **In short:**
+**MFA Delete = extra security step** that forces you to use a second factor (MFA code) before deleting or disabling versioned objects in S3.
+
+---
+
+Do you want me to also show you the **AWS CLI command** to enable MFA Delete (because that’s often an interview follow-up)?
+------------
+s3 what, why
+storage classes  
+lifecycle
+bucket versioning, bucket policy
+encryption 
+cross region replication and same region 
+Multipart upload
+Transfer Acceleration
+S3 consistency model
+Pre-signed URL
+---------------
