--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -436,3 +436,176 @@ Transfer Acceleration
 S3 consistency model
 Pre-signed URL
 ---------------
+
+
+Superb 👏 — this is one of the **most common real-world and interview questions** for AWS engineers (especially in DevOps roles).
+
+Let’s break it down step-by-step in **simple language**, with **example setup** and **why each step matters**.
+
+---
+
+## 🎯 Scenario
+
+You have:
+
+* **Account A** → EC2 instance
+* **Account B** → S3 bucket
+
+You want your EC2 in **Account A** to access (read/write) data from the **S3 bucket in Account B**.
+
+---
+
+## 🧠 The Challenge
+
+By default, AWS accounts are **isolated** —
+EC2 in one account **cannot access** S3 in another unless **you explicitly allow it** using IAM policies.
+
+So, we must **set up cross-account access** ✅
+
+---
+
+## 🏗️ What Needs to Be Setup
+
+Here’s the **correct and secure way**:
+
+---
+
+### **Step 1: Identify resources**
+
+| Resource  | Account   | Example                           |
+| --------- | --------- | --------------------------------- |
+| EC2       | Account A | EC2 with IAM role `EC2AccessRole` |
+| S3 Bucket | Account B | `my-app-data-bucket`              |
+
+---
+
+### **Step 2: Create an IAM Role in Account A (for EC2)**
+
+In **Account A**:
+
+1. Go to **IAM → Roles → Create Role**
+2. Choose **AWS service → EC2**
+3. Attach an inline or managed policy that allows access to the target S3 bucket.
+
+Example Policy:
+
+```json
+{
+  "Version": "2012-10-17",
+  "Statement": [
+    {
+      "Effect": "Allow",
+      "Action": [
+        "s3:GetObject",
+        "s3:ListBucket"
+      ],
+      "Resource": [
+        "arn:aws:s3:::my-app-data-bucket",
+        "arn:aws:s3:::my-app-data-bucket/*"
+      ]
+    }
+  ]
+}
+```
+
+✅ This tells EC2 it’s *allowed* to access that S3 bucket — but the bucket also needs to **allow this access**.
+
+---
+
+### **Step 3: Attach Role to EC2 Instance**
+
+Attach the role `EC2AccessRole` to your EC2 instance.
+
+---
+
+### **Step 4: Add Bucket Policy in Account B**
+
+In **Account B → S3 → Bucket → Permissions → Bucket Policy**,
+add a **cross-account policy** that allows the EC2 role from Account A to access it.
+
+Example Policy:
+
+```json
+{
+  "Version": "2012-10-17",
+  "Statement": [
+    {
+      "Sid": "AllowAccountAAccess",
+      "Effect": "Allow",
+      "Principal": {
+        "AWS": "arn:aws:iam::<AccountA_ID>:role/EC2AccessRole"
+      },
+      "Action": [
+        "s3:GetObject",
+        "s3:ListBucket"
+      ],
+      "Resource": [
+        "arn:aws:s3:::my-app-data-bucket",
+        "arn:aws:s3:::my-app-data-bucket/*"
+      ]
+    }
+  ]
+}
+```
+
+✅ This gives permission from **Account B’s side** to allow **Account A’s IAM role**.
+
+---
+
+### **Step 5: Test Access from EC2**
+
+Now on your EC2 instance (in Account A):
+
+Run:
+
+```bash
+aws s3 ls s3://my-app-data-bucket --region <bucket-region>
+```
+
+If everything is set up correctly, you’ll see the bucket’s contents 🎉
+
+---
+
+## 🧩 How It Works
+
+| Step                | Who controls it | What it does                                  |
+| ------------------- | --------------- | --------------------------------------------- |
+| IAM Role Policy     | Account A       | Defines *what* EC2 is allowed to do           |
+| Bucket Policy       | Account B       | Defines *who* is allowed to access the bucket |
+| EC2 Role attachment | Account A       | Provides credentials for EC2                  |
+| AWS internal auth   | AWS             | Validates trust between accounts              |
+
+Both sides must **agree** (IAM + S3 bucket policy) — that’s what makes cross-account access secure 🔒
+
+---
+
+## 🧠 Bonus Tip: For Large Setups
+
+You can simplify this using:
+
+* **AWS Resource Access Manager (RAM)** for shared resources
+* **Cross-account IAM roles** (AssumeRole)
+* **S3 Access Points** for fine-grained access control
+
+---
+
+## ⚡ Summary
+
+| Component            | Configured In | Purpose                             |
+| -------------------- | ------------- | ----------------------------------- |
+| IAM Role (for EC2)   | Account A     | Gives EC2 permission to access S3   |
+| Role attached to EC2 | Account A     | Provides temporary credentials      |
+| S3 Bucket Policy     | Account B     | Grants Account A’s role access      |
+| AWS Auth             | Both accounts | Validates cross-account permissions |
+
+---
+
+✅ **Final Access Flow:**
+
+> EC2 (Account A) → IAM Role → Authenticated to AWS → Requests Object →
+> S3 Bucket (Account B) checks policy → Grants access → File delivered 🎯
+
+---
+
+Would you like me to show the **same setup using AWS CLI commands** (creating role, policy, and bucket policy step-by-step)? That’s often how it’s done in DevOps pipelines.
+------------------
