--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -436,7 +436,7 @@ Transfer Acceleration
 S3 consistency model
 Pre-signed URL
 ---------------
-
+explain me if my ec2 is in one AWS account and i need to access the s3 in another account for this to work what needs to be setup
 
 Superb 👏 — this is one of the **most common real-world and interview questions** for AWS engineers (especially in DevOps roles).
 
