--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -609,3 +609,343 @@ You can simplify this using:
 
 Would you like me to show the **same setup using AWS CLI commands** (creating role, policy, and bucket policy step-by-step)? That’s often how it’s done in DevOps pipelines.
 ------------------
+presigned URLS what is this in S3
+Excellent question 🌟 — this is a very **important S3 concept**, especially for **security and temporary access** in AWS.
+
+Let’s break it down simply 👇
+
+---
+
+## 🔐 What is a **Pre-Signed URL** in Amazon S3?
+
+A **pre-signed URL** is a **temporary, secure link** that gives **time-limited access** to a specific object (file) in your S3 bucket — **without making the object public**.
+
+---
+
+### 🧠 Simple Example
+
+Let’s say:
+
+* You have a **private S3 bucket** (no public access)
+* You stored a file:
+
+  ```
+  s3://my-private-bucket/reports/data.xlsx
+  ```
+
+Now you want to share that file with someone — but **only for 10 minutes**.
+
+👉 You generate a **pre-signed URL**.
+That URL looks like this:
+
+```
+https://my-private-bucket.s3.amazonaws.com/reports/data.xlsx?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=...
+```
+
+Whoever gets this link can download the file **without needing AWS credentials**, until it **expires**.
+
+---
+
+### ⚙️ How It Works
+
+A **pre-signed URL** is generated using your AWS credentials and includes:
+
+* File path (object key)
+* Expiration time
+* Signature (authentication token)
+
+AWS validates this signature when someone tries to access it.
+
+---
+
+### 🧩 Use Cases
+
+| Use Case                       | Description                                                                                   |
+| ------------------------------ | --------------------------------------------------------------------------------------------- |
+| 🧾 **Secure file download**    | Share a report, image, or document privately for limited time                                 |
+| 📤 **Upload from browser/app** | Allow users to upload files directly to S3 without giving IAM access                          |
+| 🧰 **Temporary API access**    | Backend service sends a pre-signed URL to front-end or mobile app for temporary S3 operations |
+
+---
+
+### 💻 Example Using AWS CLI
+
+**Generate a pre-signed URL for a private file:**
+
+```bash
+aws s3 presign s3://my-private-bucket/reports/data.xlsx --expires-in 600
+```
+
+(`600` = 10 minutes)
+
+Output:
+
+```
+https://my-private-bucket.s3.amazonaws.com/reports/data.xlsx?X-Amz-Algorithm=...
+```
+
+✅ You can share this link, and it’ll work only for 10 minutes.
+
+---
+
+### 🧑‍💻 Example Using Python (boto3)
+
+```python
+import boto3
+
+s3 = boto3.client('s3')
+
+url = s3.generate_presigned_url(
+    'get_object',
+    Params={'Bucket': 'my-private-bucket', 'Key': 'reports/data.xlsx'},
+    ExpiresIn=300  # 5 minutes
+)
+
+print(url)
+```
+
+---
+
+### ⏰ Expiration
+
+* Default: 3600 seconds (1 hour)
+* You can set up to **7 days** maximum (when using AWS SDK)
+
+After it expires, the link is invalid ❌
+
+---
+
+### ⚔️ Security Benefits
+
+* Object remains **private** in S3
+* Access is **temporary and controlled**
+* No need to create a **public bucket** or **expose AWS credentials**
+* You can audit link usage in **CloudTrail**
+
+---
+
+### 🧠 Summary Table
+
+| Feature       | Description                                     |
+| ------------- | ----------------------------------------------- |
+| Access type   | Temporary (download or upload)                  |
+| Bucket type   | Private                                         |
+| Controlled by | Expiration time & signature                     |
+| Max duration  | 7 days                                          |
+| Use case      | Share files securely or upload from app/browser |
+
+---
+
+------------
+how can we create bucket in particular region
+Perfect 👍 let’s learn how to **create an S3 bucket in a specific AWS region** — step by step.
+
+You can do it in **three ways**:
+1️⃣ via **AWS Management Console**
+2️⃣ via **AWS CLI**
+3️⃣ via **Terraform / IaC** (for automation)
+
+Let’s see each one 👇
+
+---
+
+## 🧭 1. Using AWS Management Console (UI)
+
+1. Go to **S3 → Create bucket**
+2. Enter a **unique bucket name**, e.g. `my-app-bucket-2025`
+3. Under **AWS Region**, choose your desired region
+   👉 Example: `Asia Pacific (Mumbai) ap-south-1`
+4. (Optional) Uncheck “Block all public access” if needed
+5. Click **Create bucket**
+
+✅ Your bucket will be created in **ap-south-1 (Mumbai)** region.
+
+---
+
+## 💻 2. Using AWS CLI
+
+You can specify the region with the `--create-bucket-configuration` flag.
+
+```bash
+aws s3api create-bucket \
+  --bucket my-app-bucket-2025 \
+  --region ap-south-1 \
+  --create-bucket-configuration LocationConstraint=ap-south-1
+```
+
+✅ Bucket created in **Mumbai region** (`ap-south-1`).
+
+> ⚠️ Note: The `--create-bucket-configuration` part is required for **all regions except `us-east-1`**.
+> If you create in `us-east-1`, skip it:
+>
+> ```bash
+> aws s3api create-bucket --bucket my-app-bucket-2025 --region us-east-1
+> ```
+
+---
+
+### ✅ Verify the Region
+
+You can confirm the bucket’s region by running:
+
+```bash
+aws s3api get-bucket-location --bucket my-app-bucket-2025
+```
+
+Output example:
+
+```json
+{
+    "LocationConstraint": "ap-south-1"
+}
+```
+
+---
+
+## ⚙️ 3. Using Terraform (Optional, Infrastructure as Code)
+
+If you’re automating infrastructure:
+
+```hcl
+resource "aws_s3_bucket" "my_bucket" {
+  bucket = "my-app-bucket-2025"
+  region = "ap-south-1"
+}
+```
+
+Then apply it:
+
+```bash
+terraform init
+terraform apply
+```
+
+---
+
+## 🧠 Summary
+
+| Method    | Command / Steps                                         | Example Region |
+| --------- | ------------------------------------------------------- | -------------- |
+| Console   | Choose from dropdown                                    | ap-south-1     |
+| CLI       | `--region ap-south-1` + `--create-bucket-configuration` | ✅              |
+| Terraform | `region = "ap-south-1"`                                 | ✅              |
+
+---
+
+Would you like me to show you next how to **upload a file** into this region-specific bucket (both via console and CLI)? It’s usually the next step after bucket creation.
+
+--------------
+how many buckets can be created per region or even that is global
+Excellent question again 👏 — you’re diving into one of those subtle but very **important S3 design details**.
+
+Let’s clear this up step by step 👇
+
+---
+
+## 🧭 Bucket Limits — Global or Regional?
+
+**✅ Bucket limits are global per AWS account, not per region.**
+
+That means:
+
+> The **total number of buckets** you can create is counted **across all regions combined**, not region by region.
+
+---
+
+### 💡 Default Limit
+
+By default, each AWS account can create:
+
+> **💰 100 buckets per account (globally).**
+
+This means:
+
+* You can have **100 total buckets**, no matter if they’re in:
+
+  * `ap-south-1` (Mumbai)
+  * `us-east-1` (Virginia)
+  * `eu-west-1` (Ireland)
+    … combined total ≤ **100**.
+
+---
+
+### 📦 Example
+
+| Bucket Name       | Region     | Count |
+| ----------------- | ---------- | ----- |
+| `app-data-mumbai` | ap-south-1 | 1     |
+| `app-logs-us`     | us-east-1  | 1     |
+| `media-files-eu`  | eu-west-1  | 1     |
+
+✅ Total = 3 buckets → within 100 global limit.
+
+You could mix regions freely — AWS counts total buckets globally.
+
+---
+
+### ⚙️ If You Need More
+
+You can **request an increase** (up to 1,000 buckets) by creating a **Service Quota Increase request** in AWS Support.
+
+Command (via AWS CLI):
+
+```bash
+aws support create-case \
+  --service-code s3 \
+  --category-code limit-increase \
+  --issue-type service-limit-increase \
+  --subject "Request to increase S3 bucket limit" \
+  --communication-body "Need 500 buckets for multi-environment storage" \
+  --region us-east-1
+```
+
+---
+
+### 🧱 But… There’s a Better Practice
+
+Instead of creating hundreds of buckets, AWS recommends:
+
+> ✅ Use **folders (prefixes)** inside one bucket.
+
+Because:
+
+* There’s **no limit** on the number of **objects** per bucket.
+* You can store **trillions of objects** in a single bucket.
+
+Example:
+
+```
+my-app-bucket/
+├── dev/
+│   ├── file1.txt
+│   └── file2.txt
+├── prod/
+│   ├── file1.txt
+│   └── file2.txt
+```
+
+So you can logically separate data inside one bucket.
+
+---
+
+### 🧠 Summary
+
+| Item                   | Scope                   | Limit                               |
+| ---------------------- | ----------------------- | ----------------------------------- |
+| Bucket count           | 🌍 Global (per account) | 100 (default), can be increased     |
+| Buckets per region     | ❌ Not region-limited    | Same global count applies           |
+| Objects per bucket     | ♾️ Unlimited            | Trillions of objects supported      |
+| Bucket name uniqueness | 🌍 Global               | Must be unique across all AWS users |
+
+---
+
+### ⚡ Best Practice Tip
+
+* Use fewer buckets.
+* Organize with **prefixes** and **tags**.
+* Use **IAM policies** or **S3 Access Points** for fine-grained permissions.
+
+---
+
+Would you like me to explain **how prefixes and partitions inside S3 help performance and scalability** (interview favorite)?
+
