--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -1121,6 +1121,179 @@ Here’s a **complete list of Amazon S3 (Simple Storage Service)** interview que
 
 ---
 
-Would you like me to give you a **set of 10 practical scenario-based S3 interview questions** (like ones asked to DevOps engineers in MNCs)?
-I can include **expected answers** too.
+Here’s a **complete list of Amazon S3 (Simple Storage Service)** interview questions — from **basic to advanced**, including **DevOps- and security-focused** scenarios relevant to your experience 👇
+
+---
+
+## 🧩 **Basic S3 Interview Questions**
+
+1. **What is Amazon S3?**
+   → Object storage service used to store and retrieve any amount of data at any time.
+
+2. **What are S3 Buckets?**
+   → Logical containers for objects; each bucket name is globally unique.
+
+3. **What are S3 Objects?**
+   → Files stored in buckets, consisting of **data + metadata + unique key**.
+
+4. **What is an S3 key?**
+   → The unique identifier for an object within a bucket (like a full path).
+
+5. **What is the maximum object size in S3?**
+   → 5 TB (but objects larger than 5 GB must use **multipart upload**).
+
+6. **What is the durability and availability of S3 Standard?**
+   → **Durability:** 99.999999999% (11 nines)
+   **Availability:** 99.99%
+
+7. **What is S3 storage class?**
+   → Defines cost, durability, and retrieval time. Examples:
+
+   * S3 Standard
+   * S3 Intelligent-Tiering
+   * S3 Standard-IA (Infrequent Access)
+   * S3 One Zone-IA
+   * S3 Glacier / Glacier Deep Archive
+
+---
+
+## 🔐 **Security & Access Control**
+
+8. **How do you secure access to an S3 bucket?**
+
+   * IAM Policies
+   * Bucket Policies
+   * ACLs (Access Control Lists)
+   * S3 Block Public Access settings
+
+9. **Difference between IAM policy and Bucket policy?**
+
+   * IAM policy → Attaches to users/roles.
+   * Bucket policy → Attaches directly to the bucket and controls access to it.
+
+10. **What are S3 Block Public Access settings?**
+    → Global settings to prevent accidental public exposure of buckets.
+
+11. **How can you encrypt data in S3?**
+
+* **Server-Side Encryption (SSE):**
+
+  * SSE-S3 (Managed by S3)
+  * SSE-KMS (Managed by KMS)
+  * SSE-C (Customer-provided key)
+* **Client-Side Encryption**
+
+12. **How can you restrict access to a specific IP range?**
+    → Use **bucket policy** with `"Condition": {"IpAddress": {"aws:SourceIp": "IP_RANGE"}}`
+
+13. **How do you enforce HTTPS access only?**
+    → Bucket policy condition using `"aws:SecureTransport": "true"`
+
+---
+
+## 🧰 **Performance, Versioning & Lifecycle**
+
+14. **What is Versioning in S3?**
+    → Keeps multiple versions of an object to recover from accidental deletes or overwrites.
+
+15. **What happens when versioning is suspended?**
+    → New uploads get a `null` version ID; old versions remain.
+
+16. **What is S3 Lifecycle Policy?**
+    → Automates transitions between storage classes or deletion after a defined period.
+
+17. **What is S3 Replication?**
+
+    * **Cross-Region Replication (CRR)** → replicate objects to another region.
+    * **Same-Region Replication (SRR)** → replicate within same region.
+
+18. **Does S3 replication copy existing objects?**
+    → No, only new or updated objects after replication is enabled.
+
+19. **What is S3 Transfer Acceleration?**
+    → Speeds up uploads using Amazon CloudFront’s globally distributed edge locations.
+
+20. **What is S3 Select and Glacier Select?**
+    → Lets you query a subset of data using SQL-like syntax, improving performance.
+
+---
+
+## ⚙️ **Advanced & DevOps-Oriented Questions**
+
+21. **How do you automate S3 bucket creation in CI/CD (Jenkins, GitHub Actions, or Terraform)?**
+    → Using Infrastructure as Code (IaC) tools like Terraform or AWS CLI commands in pipelines.
+
+22. **How do you monitor S3 usage and activity?**
+
+    * AWS CloudWatch Metrics (for storage, requests)
+    * AWS CloudTrail (for API activity)
+    * S3 Access Logs
+
+23. **How do you audit who accessed what in S3?**
+    → Enable CloudTrail data events for S3.
+
+24. **How do you handle accidental deletion?**
+
+    * Enable Versioning
+    * Use MFA Delete
+    * Restrict `s3:DeleteObject` permissions
+
+25. **How do you restrict users from deleting buckets?**
+    → Deny `s3:DeleteBucket` in IAM policy.
+
+26. **How can you make an S3 bucket act as a static website?**
+
+    * Enable “Static Website Hosting” in S3 properties.
+    * Provide index.html and error.html files.
+    * Use Route 53 alias or CloudFront for custom domain and HTTPS.
+
+27. **How do you restrict S3 access from only a VPC or EC2 instance?**
+    → Use **VPC Endpoint Policies** and **bucket policy** with `"aws:SourceVpc"` condition.
+
+28. **What are S3 Event Notifications?**
+    → Automatically trigger Lambda, SNS, or SQS on events like `PUT`, `DELETE`, etc.
+
+29. **How do you integrate S3 with CloudFront?**
+    → CloudFront acts as a CDN with S3 as the origin; improves performance and security.
+
+30. **How do you handle cross-account S3 access?**
+
+    * Bucket policy allowing other account’s IAM role/user
+    * Or use AWS STS AssumeRole for temporary access
+
+---
+
+## ☁️ **Real-World Scenario Questions**
+
+31. Your team accidentally deleted production data in S3. How do you recover it?
+    → Restore from versioning / backup / Glacier if lifecycle rules are in place.
+
+32. You need to move data from one account’s S3 bucket to another automatically. How?
+    → Use **Cross-Account Replication** with proper IAM roles and bucket policies.
+
+33. You want to store large log files for compliance for 7 years at minimum cost. Which storage class?
+    → **S3 Glacier Deep Archive**
+
+34. How do you identify publicly accessible buckets across your organization?
+    → Use **AWS Trusted Advisor** or **AWS Config rules** (like `s3-bucket-public-read-prohibited`).
+
+35. A build pipeline fails due to "AccessDenied" while uploading artifacts to S3 — what’s your approach?
+
+* Check IAM role attached to the build agent.
+* Verify S3 bucket policy and KMS key permissions.
+* Ensure correct region and encryption settings.
+
+---
+
+## 🧠 **Bonus Interview Tip**
+
+👉 In **DevOps interviews**, focus on:
+
+* S3 integration in **CI/CD pipelines** (for artifacts, logs, or Terraform state).
+* **Security & IAM roles**.
+* **Cross-account access**, **backup**, and **automation** via scripts or IaC.
+
+---
+
+
 
