--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -1294,6 +1294,31 @@ Here’s a **complete list of Amazon S3 (Simple Storage Service)** interview que
 * **Cross-account access**, **backup**, and **automation** via scripts or IaC.
 
 ---
+Multipart Upload
+A **multipart upload** in S3 via the **AWS Management Console (UI)** is **automatic** for files that exceed a certain size threshold.
+
+### 💻 Automatic Multipart Upload via Console
+
+When you use the S3 section of the AWS Management Console to upload a file:
+
+1.  Navigate to your S3 bucket in the AWS Management Console.
+2.  Click the **Upload** button.
+3.  Select the file(s) you wish to upload from your local machine.
+4.  Configure any optional properties (storage class, encryption, tags, etc.).
+5.  Click the final **Upload** button.
+
+For files **larger than 160 GB** (the maximum for a single upload via the console) or files **larger than 16 MB** (a common threshold where the console will automatically switch to multipart) the S3 console will handle the multipart upload process for you in the background.
+
+* **You do not need to manually break the file into parts** or manage the upload ID or part numbers when using the console.
+* The browser automatically handles splitting the file, uploading the parts in parallel, and reassembling them into a single object in S3.
+
+### ⚠️ Console Limitations for Large Files
+
+It's important to note the **maximum file size** for uploads directly through the AWS Management Console is **160 GB**.
+
+* For files **larger than 160 GB**, AWS recommends using the **AWS Command Line Interface (CLI)** or an **AWS SDK**, as these tools are designed to handle files up to the maximum S3 object size of 5 TB and automatically perform multipart uploads for large files.
+
+
 
 
 
