--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -1319,6 +1319,40 @@ It's important to note the **maximum file size** for uploads directly through th
 * For files **larger than 160 GB**, AWS recommends using the **AWS Command Line Interface (CLI)** or an **AWS SDK**, as these tools are designed to handle files up to the maximum S3 object size of 5 TB and automatically perform multipart uploads for large files.
 
 
+------------------------------------------
+diff btw EBS and s3
+The fundamental difference between **Amazon EBS** and **Amazon S3** is the **type of storage** they provide and their primary **use case**.
 
+**EBS (Elastic Block Store)** provides **Block Storage** for a single server, like a traditional hard drive.
+**S3 (Simple Storage Service)** provides **Object Storage** for virtually unlimited data accessible from anywhere.
+
+Here is a detailed comparison:
+
+| Feature | Amazon EBS (Elastic Block Store) 💾 | Amazon S3 (Simple Storage Service) 🌐 |
+| :--- | :--- | :--- |
+| **Storage Type** | **Block Storage** (like a virtual hard drive or disk). | **Object Storage** (data is stored as objects in buckets). |
+| **Primary Use Case** | **Primary storage** for **EC2 instances** (OS boot volumes, databases, applications that require frequent updates and low-latency disk access). | **General storage** for unstructured data (backups, media files, data lakes, static website hosting, archives). |
+| **Accessibility** | Can be **attached to and accessed by a single EC2 instance** in a single Availability Zone (AZ) at a time (with multi-attach exceptions). | Accessible **over the internet** via REST APIs (HTTP/HTTPS) from anywhere, by multiple users/services concurrently. |
+| **Latency/Performance** | **Very low and consistent latency** (sub-millisecond) and high IOPS, ideal for transactional workloads. | **Higher latency** than EBS, but excellent for high-throughput and "write once, read many" scenarios. |
+| **Scalability** | **Limited** by the provisioned volume size (up to 16 TiB/volume) and requires manual volume resizing or attaching new volumes. | **Virtually unlimited** storage capacity. Scales automatically. |
+| **Durability** | High durability (99.999%) but data is redundant **within a single Availability Zone (AZ)**. | Extremely high durability (**11 nines** - 99.999999999%) because data is automatically replicated **across multiple AZs** within a region. |
+| **Pricing Model** | Pay for the **provisioned capacity** (GB/month) and **provisioned/used IOPS**, even if you don't fill the volume. | Pay for **storage used** (GB/month), **requests** (PUT/GET), and **data transfer out**. |
+
+***
+
+### When to Use Which Service
+
+#### **Use Amazon EBS When...**
+
+* You need a **boot volume** for an Amazon EC2 instance (EBS is the only option).
+* You are running a **database** (e.g., MySQL, PostgreSQL) that requires high-speed, low-latency, persistent block access.
+* Your application or operating system needs a storage volume with a **file system** (like ext4 or NTFS) for primary data storage.
+
+#### **Use Amazon S3 When...**
+
+* You need to store **unstructured data** like images, videos, logs, and sensor data.
+* You need a highly durable, cost-effective place for **backups, archives, or disaster recovery**.
+* You are building a **data lake** or storing data for big data analytics.
+* You are hosting a **static website** or need to distribute content globally via a Content Delivery Network (CDN) like CloudFront.
 
 
