--- a/AWS new 2025/S3.md
+++ b/AWS new 2025/S3.md
@@ -1355,4 +1355,9 @@ Here is a detailed comparison:
 * You are building a **data lake** or storing data for big data analytics.
 * You are hosting a **static website** or need to distribute content globally via a Content Delivery Network (CDN) like CloudFront.
 
+EFS
+You need a shared file system that multiple EC2 instances, containers, or serverless functions must access simultaneously.
 
+Your application needs to use standard file system operations (like open, close, read, write, and file locking).
+
+You are "lifting and shifting" an existing application that relies on the NFS protocol.
